# calculadora-preco

./: .env.example  .gitignore  .railway.env.example  Dockerfile  README.md  app.py  calculator.py  docker-compose.yml  main.py  pyproject.toml  railway.json  test_conexoes.py
backend/: .env.example  calculator.py  pyproject.toml  roles.json
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: clerk_auth.py
backend/app/routes/: aprovacao.py  aprovacoes.py  calculadora.py  dashboard.py  ia.py  listings.py  rules.py
backend/clients/: gemini.py  github_client.py  hostaway.py  pricelabs.py
backend/rules/: README.md  demanda.md  disponibilidade.md  repasse.md  temporada.md
backend/rules/arquivadas/: demanda.md  disponibilidade.md  temporada.md
backend/tests/: test_conexoes.py
clients/: __init__.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Header.jsx  MetricCard.jsx  Sidebar.jsx
frontend/src/hooks/: useCalculadora.js
frontend/src/pages/: Aprovacao.jsx  Aprovacoes.jsx  Calculadora.jsx  Dashboard.jsx  Login.jsx  Politicas.jsx
frontend/src/services/: api.js
frontend/src/styles/: tokens.css
rules/: combinadas.md
